--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,16 @@ dependencies:
   get_it: ^4.0.2
   progress_dialog: ^1.2.4
   dio: ^3.0.10
+  mock_web_server: ^4.1.1
+  mockito: ^4.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
+  http_mock_adapter: ^0.1.5
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
